<resources>
    <string name="app_name">Appericles</string>
    <string name="bem_vindo">Bem vindo ao Péricles</string>
    <string name="login">Login</string>
    <string name="imagem_do_usuario">Imagem do usuario</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="logo">Dig Din ®</string>
    <string name="emaillogin">VitasDeus@umburaco.com</string>
    <string name="pass">**********</string>
    <string name="username">Usuário</string>
    <string name="password">Senha</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha ?</string>
    <string name="repita_sua_senha">Confirme sua senha</string>
    <string name="pergunta_secreta">Pergunta secreta</string>
    <string name="resposta">Resposta</string>
    <string name="codigo">Código</string>
    <string name="secreto_codigo">Secreto, apenas para membros do péricles</string>
    <string name="vez_da_agua">Vez da água</string>
    <string name="anuncio_agua">A vez de pagar a água é do:</string>
    <string name="vinicius">Vinicius</string>
    <string name="paguei">Paguei</string>
    <string name="mandar_alerta">Mandar Alerta</string>
    <string name="dividas">Dividas</string>
    <string name="a_receber">A receber</string>
    <string name="a_pagar">A pagar</string>
    <string name="erik">Erik</string>
    <string name="rahel">Rahel</string>
    <string name="thomas">Thomas</string>
    <string name="novo">Novo</string>

    <string-array name="perguntas_secretas_array">
        <item>Selecione</item>
        <item>Como provar para os pais que suplemento não é bomba ?</item>
        <item>Beibe beibe do biruleibe leibe ?</item>
        <item>Afonso é ?</item>
        <item>Quem colocou esse ventilador rosa no teto ?</item>
        <item>Se eu tomar glutamina vou ficar com o gluteo igual as mina ?</item>
        <item>Eu cavo, tu cavas, ele cava, nos cavamos, vos cavais, eles cavam</item>
    </string-array>
</resources>
